Fix datepicker portal overflow issue within board-panel block

--- a/sass/blocks/_boss-board.sass
+++ b/sass/blocks/_boss-board.sass
@@ -39,9 +39,6 @@ $block: ".boss-board"
 
   // $Board MOD: role panel
   &_role_panel
-    position: relative
-    z-index: 10
-    overflow: hidden
     border-radius: 10px
     box-shadow: 0 5px 30px -5px rgba(0,0,0,.3)
 
